Apply suggestions from code review
Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to obtain keywords from a given dataset.\n",
         "\n",
-        "The example uses an extract from AG News dataset. You can adapt this example by using the data and categories that are relevant to your use case. With this approach, you can effortlessly process datasets of any scale, big or small, to obtain keywords. All powered by a state-of-the-art language model."
+        "The example uses an extract from the AG News dataset. You can adapt this example by using the data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, big or small, to obtain keywords, all powered by a state-of-the-art language model."
       ]
     },
     {
@@ -60,7 +60,7 @@
       "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
       "metadata": {},
       "source": [
-        "In this notebook, we'll use Python's `getpass` module to safely input the key. After execution, please provide your unique kluster.ai API key (ensure no spaces)."
+        "In this notebook, we'll use Python's `getpass` module to input the key safely. After execution, please provide your unique kluster.ai API key (ensure no spaces)."
       ]
     },
     {
@@ -172,7 +172,7 @@
         "id": "QjCVfg65jKz6"
       },
       "source": [
-        "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
+        "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can discuss the data.\n",
         "\n",
         "This notebook comes with a preloaded sample dataset based on the AG News dataset. It includes sections of news headlines and their leads, all set for processing. No additional setup is needed. Proceed to the next steps to begin working with this data."
       ]
@@ -244,7 +244,7 @@
         "\n",
         "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
-        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
+        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its model. Also, we are using a temperature of `0.5`, but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
       ]
     },
     {
@@ -547,7 +547,7 @@
       "id": "12c1f6ac-8d60-4158-9036-de79fa274983",
       "metadata": {},
       "source": [
-        "With the job completed, we'll retrieve the results and review the responses generated for each request. The results are parsed. To fetch the results from the platform, you need to retrieve the `output_file_id` from the batch job and then use the `files.content` endpoint, providing that specific file ID. Note that the job status must be `completed` to retrieve the results!"
+        "With the job completed, we'll retrieve the results and review the responses generated for each request. The results are parsed. To fetch the results from the platform, you must retrieve the `output_file_id` from the batch job and then use the `files.content` endpoint, providing that specific file ID. Note that the job status must be `completed` to retrieve the results!"
       ]
     },
     {
