--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -25,7 +25,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "In other notebooks, we used AI models to perform simple tasks like <a href=\"/tutorials/klusterai-api/text-classification/text-classification-openai-api/\" target=\"_blank\">text classification</a>, <a href=\"/klusterai-api/sentiment-analysis-api/\" target=\"_blank\">sentiment analysis</a> and <a href=\"/tutorials/klusterai-api/keyword-extraction-api/\" target=\"_blank\">keyword extraction</a>.\n",
+    "In other notebooks, we used AI models to perform simple tasks like <a href=\"/tutorials/klusterai-api/text-classification/text-classification-openai-api/\" target=\"_blank\">text classification</a>, <a href=\"/tutorials/klusterai-api/sentiment-analysis-api/\" target=\"_blank\">sentiment analysis</a> and <a href=\"/tutorials/klusterai-api/keyword-extraction-api/\" target=\"_blank\">keyword extraction</a>.\n",
     "\n",
     "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to combine different tasks into a single batch file. Note that each task in the JSONL file can have its own model, system prompt, and particular request.\n",
     "\n",
@@ -182,11 +182,11 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
+    "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can discuss the data.\n",
     "\n",
     "This notebook includes three sample datasets: Amazon musical instruments reviews, Top 1000 IMDb Movies, and AG News sample.\n",
     "\n",
-    "The following code fetches the data and last 5 data points of a single data sample. Feel free to change this or bring your own dataset."
+    "The following code fetches the data and the last 5 data points of a single data sample. Feel free to change this or bring your own dataset."
    ]
   },
   {
@@ -342,7 +342,7 @@
     "\n",
     "- **Sentiment analysis** - reviewing text to determine whether there is positive, neutral, or negative notation to the statement\n",
     "- **Translation** - translate the text to any other language, in this example, Spanish\n",
-    "- **Summarization** - express the text in a short and concise form\n",
+    "- **Summarization** - express the text in a concise form\n",
     "- **Topic classification** - classify the text between a given set of categories\n",
     "- **Keyword extraction** - provide a number of keywords\n",
     "\n",
@@ -1057,7 +1057,7 @@
    "id": "d42bcd40",
    "metadata": {},
    "source": [
-    "This tutorial used the chat completion endpoint to perform many different tasks via kluster.ai batch API. This particular example performed five different tasks for each element of the dataset: sentiment analysis, translation (to Spanish), summarization, topic classification and keyword extraction.\n",
+    "This tutorial used the chat completion endpoint to perform many tasks via kluster.ai batch API. This particular example performed five different tasks for each element of the dataset: sentiment analysis, translation (to Spanish), summarization, topic classification and keyword extraction.\n",
     "\n",
     "To submit a batch job we've:\n",
     "\n",
