--- a/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
@@ -140,7 +140,9 @@
       "source": [
         "Now that we've the library, we can initialize the LLM object for batch. Note that Curator supports kluster.ai natively, so you just need to provide the model to use, API key, and completion window.\n",
         "\n",
-        "This example uses `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo`, but feel free to comment it and uncomment any other model you want to try out."
+        "This example uses `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo`, but feel free to comment it and uncomment any other model you want to try out.",
+        "\n",
+        "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n"
       ]
     },
     {
