--- a/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
@@ -142,7 +142,7 @@
         "\n",
         "This example uses `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo`, but feel free to comment it and uncomment any other model you want to try out.",
         "\n",
-        "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n"
+        "Please refer to the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n"
       ]
     },
     {
