Adds image analysis notebook (#84)
* first draft

* final commit

* llms

* fixes

* Apply suggestions from code review

Co-authored-by: Kevin Neilson <kevin@papermoon.io>

* llms

* Apply suggestions from code review

Co-authored-by: Kevin Neilson <kevin@papermoon.io>

* llms

---------

Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -96,17 +96,9 @@
       "execution_count": 2,
       "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "pip install -q openai"
+        "%pip install -q openai"
       ]
     },
     {
@@ -268,7 +260,7 @@
         "#model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
         "\n",
         "# Ensure the directory exists\n",
-        "os.makedirs(\"keyword_extraction/data\", exist_ok=True)\n",
+        "os.makedirs(\"keyword_extraction/\", exist_ok=True)\n",
         "\n",
         "# Create the batch job file with the prompt and content\n",
         "def create_batch_file(df):\n",
