--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -278,7 +278,7 @@
         "#model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
         "\n",
         "# Ensure the directory exists\n",
-        "os.makedirs(\"sentiment_analysis/data\", exist_ok=True)\n",
+        "os.makedirs(\"sentiment_analysis\", exist_ok=True)\n",
         "\n",
         "# Create the batch job file with the prompt and content\n",
         "def create_batch_file(df):\n",
@@ -324,10 +324,19 @@
       "execution_count": 7,
       "id": "qNhmrmHdnp7g",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "sentiment_analysis/batch_job_request.jsonl\n"
+          ]
+        }
+      ],
       "source": [
         "batch_list = create_batch_file(df)\n",
-        "filename = save_batch_file(batch_list)"
+        "data_dir = save_batch_file(batch_list)\n",
+        "print(data_dir)"
       ]
     },
     {
@@ -371,7 +380,7 @@
       "id": "e48b2489-99bc-431b-8cb3-de816550d524",
       "metadata": {},
       "source": [
-        "Now that we’ve prepared our input file, it’s time to upload it to the kluster.ai platform. To do so, you can use the `files.create` endpoint of the client, where the purpose is set to `batch`. This will return the file ID, which we need to log for the next steps."
+        "Now that we've prepared our input file, it's time to upload it to the kluster.ai platform. To do so, you can use the `files.create` endpoint of the client, where the purpose is set to `batch`. This will return the file ID, which we need to log for the next steps."
       ]
     },
     {
@@ -384,13 +393,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "File uploaded successfully. File ID: 67e1896b6afe1d706e77c3b9\n"
+            "File uploaded successfully. File ID: 67e57e7933090e20560503db\n"
           ]
         }
       ],
       "source": [
-        "data_dir = 'sentiment_analysis/batch_job_request.jsonl'\n",
-        "\n",
         "# Upload batch job request file\n",
         "with open(data_dir, 'rb') as file:\n",
         "    upload_response = client.files.create(\n",
@@ -434,11 +441,11 @@
             "\n",
             "Batch job created:\n",
             "{\n",
-            "  \"id\": \"67e1896c6afe1d706e77c3c1\",\n",
+            "  \"id\": \"67e57e7d33090e20560504e2\",\n",
             "  \"completion_window\": \"24h\",\n",
-            "  \"created_at\": 1742834028,\n",
+            "  \"created_at\": 1743093373,\n",
             "  \"endpoint\": \"/v1/chat/completions\",\n",
-            "  \"input_file_id\": \"67e1896b6afe1d706e77c3b9\",\n",
+            "  \"input_file_id\": \"67e57e7933090e20560503db\",\n",
             "  \"object\": \"batch\",\n",
             "  \"status\": \"pre_schedule\",\n",
             "  \"cancelled_at\": null,\n",
@@ -447,7 +454,7 @@
             "  \"error_file_id\": null,\n",
             "  \"errors\": [],\n",
             "  \"expired_at\": null,\n",
-            "  \"expires_at\": 1742920428,\n",
+            "  \"expires_at\": 1743179773,\n",
             "  \"failed_at\": null,\n",
             "  \"finalizing_at\": null,\n",
             "  \"in_progress_at\": null,\n",
@@ -662,14 +669,6 @@
         "\n",
         "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9ddbde4d-72f4-4a63-832b-4eb51f8674d2",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
