--- a/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
@@ -92,10 +92,10 @@
       },
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stdin",
           "output_type": "stream",
           "text": [
-            "Enter your kluster.ai API key: ··········\n"
+            "Enter your kluster.ai API key:  ········\n"
           ]
         }
       ],
@@ -122,7 +122,15 @@
       "metadata": {
         "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "pip install -q openai"
       ]
@@ -270,7 +278,7 @@
       "source": [
         "This example selects the `deepseek-ai/DeepSeek-V3` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also comment DeepSeek V3, and uncomment whatever model you want to try out.\n",
         "\n",
-        "Please refer to the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
+        "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
         "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
       ]
@@ -299,7 +307,7 @@
         "#model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
         "\n",
         "# Ensure the directory exists\n",
-        "os.makedirs(\"text_clasification/data\", exist_ok=True)\n",
+        "os.makedirs(\"text_clasification\", exist_ok=True)\n",
         "\n",
         "# Create the batch job file with the prompt and content\n",
         "def create_batch_file(df):\n",
@@ -349,10 +357,19 @@
       "metadata": {
         "id": "qNhmrmHdnp7g"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "text_clasification/batch_job_request.jsonl\n"
+          ]
+        }
+      ],
       "source": [
         "batch_list = create_batch_file(df)\n",
-        "filename = save_batch_file(batch_list)"
+        "data_dir = save_batch_file(batch_list)\n",
+        "print(data_dir)"
       ]
     },
     {
@@ -411,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "id": "l5eu5UyAnEtk",
       "metadata": {
         "colab": {
@@ -425,13 +442,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "File uploaded successfully. File ID: 67ddb3ef6afe1d706e51b7a6\n"
+            "File uploaded successfully. File ID: 67e57d8f8573d5180a551f9e\n"
           ]
         }
       ],
       "source": [
-        "data_dir = 'text_clasification/batch_job_request.jsonl'\n",
-        "\n",
         "# Upload batch job request file\n",
         "with open(data_dir, 'rb') as file:\n",
         "    upload_response = client.files.create(\n",
@@ -466,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "id": "71a24704-7190-4e24-898f-c4eff062439a",
       "metadata": {
         "colab": {
@@ -483,11 +498,11 @@
             "\n",
             "Batch job created:\n",
             "{\n",
-            "  \"id\": \"67ddb3f151ba53f099cdb3f9\",\n",
+            "  \"id\": \"67e57d94562f33dce8762faf\",\n",
             "  \"completion_window\": \"24h\",\n",
-            "  \"created_at\": 1742582769,\n",
+            "  \"created_at\": 1743093140,\n",
             "  \"endpoint\": \"/v1/chat/completions\",\n",
-            "  \"input_file_id\": \"67ddb3ef6afe1d706e51b7a6\",\n",
+            "  \"input_file_id\": \"67e57d8f8573d5180a551f9e\",\n",
             "  \"object\": \"batch\",\n",
             "  \"status\": \"pre_schedule\",\n",
             "  \"cancelled_at\": null,\n",
@@ -496,7 +511,7 @@
             "  \"error_file_id\": null,\n",
             "  \"errors\": [],\n",
             "  \"expired_at\": null,\n",
-            "  \"expires_at\": 1742669169,\n",
+            "  \"expires_at\": 1743179540,\n",
             "  \"failed_at\": null,\n",
             "  \"finalizing_at\": null,\n",
             "  \"in_progress_at\": null,\n",
@@ -550,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "id": "SuH0CfoqjP3d",
       "metadata": {
         "colab": {
@@ -563,9 +578,6 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'Job completed!'"
             ]
@@ -623,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 12,
       "id": "806a5eb1-f6d3-491d-b051-9d44bf046a7e",
       "metadata": {
         "colab": {
