--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -78,7 +78,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdin",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter your kluster.ai API key:  ········\n"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5",
       "metadata": {},
       "outputs": [
@@ -114,7 +114,7 @@
         }
       ],
       "source": [
-        "pip install -q openai"
+        "%pip install -q openai"
       ]
     },
     {
