--- a/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
@@ -92,7 +92,7 @@
       },
       "outputs": [
         {
-          "name": "stdin",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter your kluster.ai API key:  ········\n"
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5",
       "metadata": {
         "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5"
@@ -132,7 +132,7 @@
         }
       ],
       "source": [
-        "pip install -q openai"
+        "%pip install -q openai"
       ]
     },
     {
@@ -278,7 +278,7 @@
       "source": [
         "This example selects the `deepseek-ai/DeepSeek-V3` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also comment DeepSeek V3, and uncomment whatever model you want to try out.\n",
         "\n",
-        "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
+        "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
         "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
       ]
