--- a/tutorials/klusterai-api/image-analysis.ipynb
+++ b/tutorials/klusterai-api/image-analysis.ipynb
@@ -909,7 +909,8 @@
         "- <a href=\"https://github.com/kluster-ai/klusterai-cookbook/blob/main/images/text-typo-image.jpeg?raw=true\" target=\"_blank\">Hand written note with a typo</a>, we asked what the text in the image is and to find a typo if any (\"I LOVE PROGRAMING\", \"I love programing\" missing an \"m\" in both instances):\n",
         "   - All models responded correctly ✅\n",
         "  \n",
-        "A music score was provided in other attempts, and the model was asked to identify the musical notes. Still, none of the models could locate the sequence of notes correctly.\n",
+        "\n",
+        "All models were also tested with a musical score by asking them to identify the sequence of notes. However, none of the models were able to correctly recognize the musical notes, so this test was not included in the final notebook.\n",
         "\n",
         "To submit a batch job, we've:\n",
         "\n",
@@ -922,14 +923,6 @@
         "\n",
         "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As the next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "992f4555-150e-496e-90ab-fda39bbe3d1f",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
