--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -421,7 +421,7 @@
         "\n",
         "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
-        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
+        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes."
       ]
     },
     {
