--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -78,7 +78,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdin",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter your kluster.ai API key:  ········\n"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5",
       "metadata": {},
       "outputs": [
@@ -114,7 +114,7 @@
         }
       ],
       "source": [
-        "pip install -q openai"
+        "%pip install -q openai"
       ]
     },
     {
@@ -254,7 +254,7 @@
         "\n",
         "Please refer to the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
-        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
+        "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes."
       ]
     },
     {
