--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Effective Prompt Engineering with the kluster.ai API\n",
     "\n",
-    "In this notebook, we'll showcase how **prompt engineering** can dramatically improve the quality of responses from LLMs. By comparing three prompts—**Bad**, **Better**, and **Best**—we'll see how adding clearer instructions, richer data, and specific business context delivers increasingly targeted and actionable results. In this notebook, we encourage you to experiment with different models, using any of the [supported models](https://docs.kluster.ai/api-reference/reference/#list-supported-models) available from the Kluster.ai API. \n",
+    "In this notebook, we'll showcase how prompt engineering can dramatically improve the quality of responses from LLMs. By comparing three prompts—Bad, Better, and Best—we'll see how adding clearer instructions, richer data, and specific business context delivers increasingly targeted and actionable results. In this notebook, we encourage you to experiment with different models, using any of the [supported models](https://docs.kluster.ai/api-reference/reference/#list-supported-models) available from the Kluster.ai API. \n",
     "\n",
     "Let's get started with the \"Bad\" prompt and proceed step by step toward \"Better\" and ultimately \"Best.\""
    ]
@@ -144,12 +144,12 @@
    "metadata": {},
    "source": [
     "### Analysis\n",
-    "The **Bad** prompt offers only the most rudimentary information—products and their sales—and provides no clear instructions beyond \"tell me about it.\" This inevitably results in:\n",
+    "The Bad prompt offers only the most rudimentary information—products and their sales—and provides no clear instructions beyond \"tell me about it.\" This inevitably results in:\n",
     "1. **Minimal Context**: Without pricing, profit margins, or a specific goal (e.g., analyzing profitability, recommending strategies), the LLM can only produce surface-level observations.\n",
     "2. **No Actionable Guidance**: The prompt doesn't request particular insights or next steps, so the model responds with high-level statements rather than solutions.\n",
     "3. **Limited Utility**: Because the data is purely quantitative (sales alone) and lacks details such as time frame, product characteristics, or marketing context, the response cannot go beyond pointing out which products sold more or less.\n",
     "\n",
-    "Overall, this prompt's lack of **clear direction** and **supporting information** stifles the model's ability to provide meaningful analysis or recommendations."
+    "Overall, this prompt's lack of clear direction and supporting information stifles the model's ability to provide meaningful analysis or recommendations."
    ]
   },
   {
@@ -291,12 +291,13 @@
    "metadata": {},
    "source": [
     "### Analysis\n",
-    "This **Better** prompt elevates the request beyond the \"Bad\" version by incorporating **pricing details** and **clearer instructions**, which yield more focused calculations and recommendations. The prompt also **specifies a timeline** (January 2025) and **outlines key tasks** (calculating revenue, identifying product performance, suggesting sales-boosting strategies). As a result, the LLM response provides:\n",
+    "This Better prompt elevates the request beyond the \"Bad\" version by incorporating pricing details and clearer instructions, which yield more focused calculations and recommendations. The prompt also specifies a timeline (January 2025) and outlines key tasks (calculating revenue, identifying product performance, suggesting sales-boosting strategies). As a result, the LLM response provides:\n",
+    "\n",
     "1. **Structured Revenue Calculations**: By explicitly asking for per-product revenue, it brings a quantitative foundation to the analysis.\n",
     "2. **Actionable Recommendations**: Requests for pricing and marketing adjustments prompt specific suggestions, rather than broad, generic ideas.\n",
     "3. **Organized Output**: Clearly defined sections ensure the response is easy to interpret and act upon.\n",
     "\n",
-    "However, the prompt stops short of requesting **profit margins**, **customer demographics**, or **broader business context** (e.g., marketing channels or inventory challenges) seen in the **Best** prompt. Consequently, while the \"Better\" prompt moves toward more concrete, data-driven insights, it still lacks the richness and depth needed to produce **thorough, strategic recommendations**."
+    "However, the prompt stops short of requesting profit margins, customer demographics, or broader business context (e.g., marketing channels or inventory challenges) seen in the Best prompt. Consequently, while the \"Better\" prompt moves toward more concrete, data-driven insights, it still lacks the richness and depth needed to produce thorough, strategic recommendations."
    ]
   },
   {
@@ -524,7 +525,7 @@
    "metadata": {},
    "source": [
     "### Analysis\n",
-    "The **Best** prompt excels because it integrates **comprehensive data** (product sales, prices, and profit margins) with **detailed business context** (target demographics, product characteristics, marketing channels, and specific challenges). By explicitly specifying the **desired structure**—including step-by-step revenue and profit analysis, targeted profitability recommendations, and marketing optimizations—it guides the LLM toward **high-value, actionable insights**.\n",
+    "The Best prompt excels because it integrates comprehensive data (product sales, prices, and profit margins) with detailed business context (target demographics, product characteristics, marketing channels, and specific challenges). By explicitly specifying the desired structure—including step-by-step revenue and profit analysis, targeted profitability recommendations, and marketing optimizations—it guides the LLM toward high-value, actionable insights.\n",
     "\n",
     "Key strengths of this Best prompt:\n",
     "1. **Complete Data & Metrics**\n",
@@ -538,7 +539,7 @@
     "5. **Logical Reasoning Instructions**\n",
     "   * Guiding the LLM to \"think step-by-step\" fosters more thoughtful planning, especially around clearing excess inventory and leveraging different marketing channels.\n",
     "\n",
-    "Overall, this approach maximizes the LLM's potential, yielding responses that are **precise, context-aware, and immediately useful** to decision-makers."
+    "Overall, this approach maximizes the LLM's potential, yielding responses that are precise, context-aware, and immediately useful to decision-makers."
    ]
   },
   {
@@ -548,19 +549,19 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This side-by-side comparison demonstrates how the quality and specificity of a prompt directly influence the **depth, utility, and strategic value** of an LLM's output:\n",
+    "This side-by-side comparison demonstrates how the quality and specificity of a prompt directly influence the depth, utility, and strategic value of an LLM's output:\n",
     "* **Bad Prompt:** Minimal data and vague instructions yield only superficial insights—no clear direction or actionable strategies.\n",
-    "* **Better Prompt:** Adding **pricing details** and **specific tasks** (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
-    "* **Best Prompt:** Providing **comprehensive context**—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
+    "* **Better Prompt:** Adding pricing details** and specific tasks (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
+    "* **Best Prompt:** Providing comprehensive context—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
     "\n",
     "Key Takeaways for Effective Prompt Engineering\n",
     "* **Provide Relevant Context:** Include all essential data (pricing, margins, customer segments) to enable deeper analysis.\n",
     "* **Specify Instructions Clearly:** Outline the tasks, format, and reasoning style (e.g., step-by-step) you want the model to follow.\n",
     "* **Articulate Business Constraints & Goals:** Highlight challenges (e.g., excess inventory, limited budget) to guide strategic recommendations.\n",
     "* **Structure the Output Requirements:** Break down the response into clear, logical sections (analysis, recommendations, marketing, etc.).\n",
-    "* **Iterate for Best Results:** Incrementally refining prompts yields **exponentially better outcomes**—invest time upfront for far greater business value.\n",
+    "* **Iterate for Best Results:** Incrementally refining prompts yields exponentially better outcomes—invest time upfront for far greater business value.\n",
     "\n",
-    "By enriching prompts with thorough details and well-defined objectives, you unlock the **full potential** of LLMs to generate accurate, context-aware, and **immediately applicable** insights."
+    "By enriching prompts with thorough details and well-defined objectives, you unlock the full potential of LLMs to generate accurate, context-aware, and immediately applicable insights."
    ]
   }
  ],
