--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "## 🟢 Best Prompt\n",
     "\n",
-    "Finally, we describe arrive at our best prompt. This prompt has comprehensive context, detailed instructions, and clear formatting requirements:"
+    "Finally, we arrive at our best prompt. This prompt has comprehensive context, detailed instructions, and clear formatting requirements:"
    ]
   },
   {
