--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -5,7 +5,7 @@
    "id": "b26c7677",
    "metadata": {},
    "source": [
-    "# Effective Prompt Engineering with the kluster.ai API\n",
+    "# Effective prompt engineering with the kluster.ai API\n",
     "\n",
     "In this notebook, we'll showcase how prompt engineering can dramatically improve the quality of responses from LLMs. By comparing three prompts—Bad, Better, and Best—we'll see how adding clearer instructions, richer data, and specific business context delivers increasingly targeted and actionable results. In this notebook, we encourage you to experiment with different models, using any of the [supported models](https://docs.kluster.ai/api-reference/reference/#list-supported-models) available from the Kluster.ai API. \n",
     "\n",
