--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -64,7 +64,7 @@
    "id": "84894eb8",
    "metadata": {},
    "source": [
-    "## 🟡 Bad Prompt\n",
+    "## Bad prompt 🔴\n",
     "\n",
     "Below is an example of a bad prompt that lacks context and specificity:"
    ]
