--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -135,7 +135,7 @@
     "    messages=[{\"role\": \"user\", \"content\": bad_prompt_text}],\n",
     "    temperature=0.5\n",
     ").choices[0].message.content\n",
-    "print(response_bad)"
+    "print(`\nModel response:\n${response_bad})"
    ]
   },
   {
