--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -157,7 +157,7 @@
    "id": "87dab731",
    "metadata": {},
    "source": [
-    "## 🔵 Better Prompt\n",
+    "## Better prompt 🟡\n",
     "\n",
     "The below better prompt provides more context and clearer instructions, however, there is still room for improvement:"
    ]
