--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -282,7 +282,7 @@
     "    messages=[{\"role\": \"user\", \"content\": better_prompt_text}],\n",
     "    temperature=0.5\n",
     ").choices[0].message.content\n",
-    "print(response_better)"
+    "print(`\nModel response:\n${response_better})"
    ]
   },
   {
