--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -516,7 +516,7 @@
     "    messages=[{\"role\": \"user\", \"content\": best_prompt_text}],\n",
     "    temperature=0.5\n",
     ").choices[0].message.content\n",
-    "print(response_best)"
+    "print(`\nModel response:\n${response_best})"
    ]
   },
   {
