--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -305,7 +305,7 @@
    "id": "a8ceea92",
    "metadata": {},
    "source": [
-    "## 🟢 Best Prompt\n",
+    "## Best prompt 🟢\n",
     "\n",
     "Finally, we arrive at our best prompt. This prompt has comprehensive context, detailed instructions, and clear formatting requirements:"
    ]
